--- a/cookbook.ipynb
+++ b/cookbook.ipynb
@@ -35,21 +35,25 @@
     }
    },
    "source": [
-    "<p>The libraries **requests** and **BeautifulSoup** are commonly used in Python for web scraping and web content retrieval tasks. \n",
+    "<p>The libraries **requests**, **BeautifulSoup** and **lxml** are commonly used in Python for web scraping and web content retrieval tasks. \n",
     "\n",
     "requests: It is a powerful library that allows you to send HTTP requests to web pages and web services. With requests, you can easily retrieve HTML content, make GET and POST requests, handle cookies and sessions, and interact with web APIs. It's an essential tool for fetching web data and interacting with web resources programmatically.\n",
     "\n",
     "BeautifulSoup: This library is a popular choice for parsing and navigating HTML and XML documents. It provides a convenient way to extract specific data from web pages by traversing the HTML document's structure. You can search for tags, access tag attributes, and extract text or data of interest. When used in combination with requests, BeautifulSoup becomes a powerful tool for web scraping and data extraction.\n",
+    "\n",
+    "lxml is a sub library of pandas (so when importing it, just importing pandas is enough, assuming you have it installed) that is used to parse HTML efficiently.\n",
     "\n",
     "Together, these libraries enable you to access web content, retrieve information, and perform data extraction tasks efficiently.</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These are the dependencies, so if you don't have them, you'll need to install them with pip or whatever package manager you use\n",
+    "# pip install requests, bs4, pandas, lxml\n",
     "import requests\n",
     "from bs4 import BeautifulSoup as bs\n",
     "import pandas as pd"
@@ -64,7 +68,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = \"http://127.0.0.1:5000/\" # URL of the website\n",
+    "response = requests.get(url) # get the response from the website as a response object\n",
+    "print(response) # print the response object, though it's not what you'd expect"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, a response object isn't useful to us just yet. It contains more information than just the site's source code. Depending on the site content, it could be text, json, image, api request, etc. Here we will just read the source code as text to see what it contains."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -93,9 +123,7 @@
     }
    ],
    "source": [
-    "url = \"http://127.0.0.1:5000/\"\n",
-    "response = requests.get(url)\n",
-    "\n",
+    "response_text = response.text # turn the response object into a string\n",
     "print(response.text)"
    ]
   },
@@ -103,12 +131,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see an image present on the site: `<img alt=\"stock\" src=\"/static/stock.png\"></img>`. Pulling image is a bit different, since you can't print it out directly. In order to keep the image, you must save it to a file."
+    "Pulling image is a bit different, since you can't print it out directly. In order to keep the image, you must save it to a file.\n",
+    "We see an image present on the site: `<img alt=\"stock\" src=\"/static/stock.png\"></img>`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -137,6 +166,248 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2>Parsing html for data</h2>\n",
+    "In order to parse the information we extracted from the site, and extract the table we want, we use the functions of BeautifulSoup."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table>\n",
+      "<tr>\n",
+      "<th>Name</th>\n",
+      "<th>Age</th>\n",
+      "<th>City</th>\n",
+      "<th>Occupation</th>\n",
+      "<th>Salary</th>\n",
+      "<th>Hire Date</th>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>John Doe</td>\n",
+      "<td>25</td>\n",
+      "<td>New York</td>\n",
+      "<td>Software Engineer</td>\n",
+      "<td>$100,000</td>\n",
+      "<td>2022-09-01</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>Jane Smith</td>\n",
+      "<td>30</td>\n",
+      "<td>Los Angeles</td>\n",
+      "<td>Graphic Designer</td>\n",
+      "<td>$80,000</td>\n",
+      "<td>2022-09-02</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>Mike Johnson</td>\n",
+      "<td>35</td>\n",
+      "<td>Chicago</td>\n",
+      "<td>Marketing Manager</td>\n",
+      "<td>$120,000</td>\n",
+      "<td>2022-09-03</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>Sarah Williams</td>\n",
+      "<td>28</td>\n",
+      "<td>San Francisco</td>\n",
+      "<td>Data Analyst</td>\n",
+      "<td>$90,000</td>\n",
+      "<td>2022-09-04</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>David Brown</td>\n",
+      "<td>32</td>\n",
+      "<td>Miami</td>\n",
+      "<td>Product Manager</td>\n",
+      "<td>$110,000</td>\n",
+      "<td>2022-09-05</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>Emily Davis</td>\n",
+      "<td>27</td>\n",
+      "<td>Boston</td>\n",
+      "<td>UX Designer</td>\n",
+      "<td>$95,000</td>\n",
+      "<td>2022-09-06</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>Michael Johnson</td>\n",
+      "<td>33</td>\n",
+      "<td>Chicago</td>\n",
+      "<td>Marketing Manager</td>\n",
+      "<td>$120,000</td>\n",
+      "<td>2022-09-03</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>Anna Thompson</td>\n",
+      "<td>29</td>\n",
+      "<td>San Francisco</td>\n",
+      "<td>Data Analyst</td>\n",
+      "<td>$90,000</td>\n",
+      "<td>2022-09-04</td>\n",
+      "</tr>\n",
+      "<tr>\n",
+      "<td>David Brown</td>\n",
+      "<td>32</td>\n",
+      "<td>Miami</td>\n",
+      "<td>Product Manager</td>\n",
+      "<td>$110,000</td>\n",
+      "<td>2022-09-05</td>\n",
+      "</tr>\n",
+      "</table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "table1 = requests.get(url + 'table1') # get the table as a repsonse object\n",
+    "soup = bs(table1.text, 'html.parser') # convert response object into text, then into a soup object throught html.parser\n",
+    "table1_processed = soup.find('table') # find any tables in the soup object\n",
+    "print(table1_processed)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After parsing it and keeping only the table, we use the functions of lxml to parse it again and turn it into a pandas dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Name  Age           City         Occupation    Salary   Hire Date\n",
+      "0        John Doe   25       New York  Software Engineer  $100,000  2022-09-01\n",
+      "1      Jane Smith   30    Los Angeles   Graphic Designer   $80,000  2022-09-02\n",
+      "2    Mike Johnson   35        Chicago  Marketing Manager  $120,000  2022-09-03\n",
+      "3  Sarah Williams   28  San Francisco       Data Analyst   $90,000  2022-09-04\n",
+      "4     David Brown   32          Miami    Product Manager  $110,000  2022-09-05\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_22288\\158322927.py:1: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  df_table1 = pd.read_html(str(table1_processed))[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_table1 = pd.read_html(str(table1_processed))[0]\n",
+    "print(df_table1.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2>Data wrangling</h2>\n",
+    "If you look at the site, you'll see there are two tables. There are no benefits for the two tables to be seperate, but for some reason they are. So in order to make using the data easier, we need to combine the tables into one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Name  Age           City         Occupation    Salary   Hire Date\n",
+      "0        John Doe   25       New York  Software Engineer  $100,000  2022-09-01\n",
+      "1      Jane Smith   30    Los Angeles   Graphic Designer   $80,000  2022-09-02\n",
+      "2    Mike Johnson   35        Chicago  Marketing Manager  $120,000  2022-09-03\n",
+      "3  Sarah Williams   28  San Francisco       Data Analyst   $90,000  2022-09-04\n",
+      "4     David Brown   32          Miami    Product Manager  $110,000  2022-09-05\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\steve\\AppData\\Local\\Temp\\ipykernel_22288\\3038512959.py:5: FutureWarning: Passing literal html to 'read_html' is deprecated and will be removed in a future version. To read from a literal string, wrap it in a 'StringIO' object.\n",
+      "  df_table2 = pd.read_html(str(table1_processed))[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Getting the second table\n",
+    "table2 = requests.get(url + 'table1')\n",
+    "soup2 = bs(table1.text, 'html.parser')\n",
+    "table2_processed = soup2.find('table')\n",
+    "df_table2 = pd.read_html(str(table1_processed))[0]\n",
+    "print(df_table1.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Name  Age_x         City_x       Occupation_x  Salary_x  \\\n",
+      "0          John Doe     25       New York  Software Engineer  $100,000   \n",
+      "1        Jane Smith     30    Los Angeles   Graphic Designer   $80,000   \n",
+      "2      Mike Johnson     35        Chicago  Marketing Manager  $120,000   \n",
+      "3    Sarah Williams     28  San Francisco       Data Analyst   $90,000   \n",
+      "4       David Brown     32          Miami    Product Manager  $110,000   \n",
+      "5       David Brown     32          Miami    Product Manager  $110,000   \n",
+      "6       David Brown     32          Miami    Product Manager  $110,000   \n",
+      "7       David Brown     32          Miami    Product Manager  $110,000   \n",
+      "8       Emily Davis     27         Boston        UX Designer   $95,000   \n",
+      "9   Michael Johnson     33        Chicago  Marketing Manager  $120,000   \n",
+      "10    Anna Thompson     29  San Francisco       Data Analyst   $90,000   \n",
+      "\n",
+      "   Hire Date_x  Age_y         City_y       Occupation_y  Salary_y Hire Date_y  \n",
+      "0   2022-09-01     25       New York  Software Engineer  $100,000  2022-09-01  \n",
+      "1   2022-09-02     30    Los Angeles   Graphic Designer   $80,000  2022-09-02  \n",
+      "2   2022-09-03     35        Chicago  Marketing Manager  $120,000  2022-09-03  \n",
+      "3   2022-09-04     28  San Francisco       Data Analyst   $90,000  2022-09-04  \n",
+      "4   2022-09-05     32          Miami    Product Manager  $110,000  2022-09-05  \n",
+      "5   2022-09-05     32          Miami    Product Manager  $110,000  2022-09-05  \n",
+      "6   2022-09-05     32          Miami    Product Manager  $110,000  2022-09-05  \n",
+      "7   2022-09-05     32          Miami    Product Manager  $110,000  2022-09-05  \n",
+      "8   2022-09-06     27         Boston        UX Designer   $95,000  2022-09-06  \n",
+      "9   2022-09-03     33        Chicago  Marketing Manager  $120,000  2022-09-03  \n",
+      "10  2022-09-04     29  San Francisco       Data Analyst   $90,000  2022-09-04  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merging the two tables using built-in pandas function\n",
+    "combined_df = df_table1.merge(df_table2, on='Name')\n",
+    "print(combined_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the 'Name' column is the only column that both tables have in common, so we use that as the key\n",
+    "If you want to merge on multiple columns, you can do something like this:\n",
+    "combined_df = df_table1.merge(df_table2, on=['Name', 'Age'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h2>Using APIs</h2>\n",
     "While some sites doesn't provide ways to retrieve data, requiring you to scrape data off the site directly, some do offer built in methods of fetching data directly(and various other automation functions) in the form of API. APIs are used in a wide range of applications, from web and mobile app development to cloud services integration, IoT (Internet of Things), and more. They enable developers to leverage existing services and functionality, reducing development time and effort while promoting interoperability and flexibility in software ecosystems."
    ]
@@ -150,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +513,7 @@
        "4     Lisa White  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
